// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DecoratedListItem component should render 1`] = `
<DocumentFragment>
  <div
    class="decorated-list-item"
  >
    <div
      class="decorated-list-item__title"
    >
      <h5
        class="bold"
      >
        Title
      </h5>
    </div>
    <div
      class="decorated-list-item__content"
    >
      Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`DecoratedListItem component should render compact 1`] = `
<DocumentFragment>
  <div
    class="decorated-list-item decorated-list-item--compact"
  >
    <div
      class="decorated-list-item__title"
    >
      <h5
        class="bold"
      >
        Title
      </h5>
    </div>
    <div
      class="decorated-list-item__content"
    >
      Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`DecoratedListItem component should render compact without title 1`] = `
<DocumentFragment>
  <div
    class="decorated-list-item decorated-list-item--compact"
  >
    <div
      class="decorated-list-item__content"
    >
      Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`DecoratedListItem component should render inline 1`] = `
<DocumentFragment>
  <div
    class="decorated-list-item decorated-list-item--inline"
  >
    <div
      class="decorated-list-item__content"
    >
      Content
    </div>
  </div>
</DocumentFragment>
`;

exports[`DecoratedListItem component should render without title 1`] = `
<DocumentFragment>
  <div
    class="decorated-list-item"
  >
    <div
      class="decorated-list-item__content"
    >
      Content
    </div>
  </div>
</DocumentFragment>
`;
